*** 20010103_3 by davidt
m_join.c

*** 20010103_2 by db
- yet another obsolete prototype gone



*** 20010103_1 by vx0
- modules.c:279 'char *err;' >-> 'const char *err;'


*** 20010102_35 by spookey
 - removes AUTOCONN output lines (ANNOYING)


*** 20010102_34 by db
- updated configure setup.h.in



*** 20010102_33 by db
- committed cstone's contributed patch to fix modules under openbsd



*** 20010102_32 by db
- UNTESTED ignore fd < 0 instead of failing an assert *FOR NOW*
  adrian, might want to look at this one.



*** 20010102_31 by davidt
minor patch to stop BitchX coring over an extraneous space in /names output

*** 20010102_30 by a1kmm
Fixed a core causing bug in fdlist code.


*** 20010102_29 by davidt
Fix kill on nickchange with lazylinks

*** 20010102_28 by db
- backed out a changed until beta-2 , its broken hostmasking



*** 20010102_27 by davidt
Add (#if 0'd out) code not to introduce new NICK's to lazyleafs
immediately.  This will also make debugging LazyLeafs easier, since it
shows up the bugs elsewhere faster, without lots of squitting.
But after a beta.


*** 20010102_26 by db
- upped channel clean time for non vchans to 30 minutes
  I thought it was 30 before, it was only 15



*** 20010102_25 by davidt
Updated dependencies

*** 20010102_24 by davidt
I'm stupid, lcptr vs cptr...

*** 20010102_23 by davidt
*sigh*, fix sjoins _from_ lazylink leafs

*** 20010102_22 by davidt
Make SJOIN burst nicks where appropriate..

*** 20010102_21 by davidt
Fix modunload core bug..

*** 20010102_20 by davidt
Another go at fixing netjoins on +a channels... *sigh*

*** 20010102_19 by davidt
Fix .depend for FreeBSD

*** 20010102_18 by wcampbel
Updated some more docs


*** 20010102_17 by fl_
- reapplied the fix that got removed *growl*


*** 20010102_16 by davidt
- Fix SJOIN halfop handling for lazylinks..
- Fix clear_ban_lists to prevent spewing random memory at clients


*** 20010102_15 by wcampbel
Updated a number of docs


*** 20010102_14 by fl_